:scissors: refactor: define page margin via geom

--- a/img/assets/plantuml/puml-cheatsheet.tex
+++ b/img/assets/plantuml/puml-cheatsheet.tex
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass{article}
-\usepackage[landscape]{geometry}
+\usepackage[a4paper, landscape, margin=15pt]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage{multicol}
 \usepackage{scrextend}
@@ -23,11 +23,6 @@
     citecolor={blue!50!black},
     urlcolor={blue!80!black}
 }
-\advance\topmargin-60pt
-\advance\textheight3in
-\advance\textwidth3in
-\advance\oddsidemargin-110pt
-\advance\evensidemargin-110pt
 \parindent0pt
 \parskip2pt
 
@@ -188,16 +183,6 @@ Generic properties:
 }
 \newline\newline
 The full list of \href{http://plantuml.com/skinparam}{skinparam settings} and \href{http://plantuml.com/color}{available colors} can be found on the \href{http://plantuml.com/}{plantUML website}.
-}
-
-\block{Component diagrams}{
-  Enforcing layout..
-}
-\block{Useful links}{
-  \begin{itemize}
-  \item \href{http://plantuml.com/color}{Available colors}
-  \item \href{http://plantuml.com/skinparam}{Stylable properties}
-\end{itemize}
 }
 
 \end{multicols*}
