--- a/img/assets/plantuml/puml-cheatsheet.tex
+++ b/img/assets/plantuml/puml-cheatsheet.tex
@@ -6,15 +6,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass{article}
-\usepackage[a4paper, landscape, margin=15pt]{geometry}
+\usepackage[a4paper, landscape, margin=10pt]{geometry}
 \usepackage[T1]{fontenc}
+\usepackage[dvipsnames]{xcolor}
 \usepackage{multicol}
-\usepackage{scrextend}
-\usepackage{amsfonts}
-\usepackage[most]{tcolorbox}
+\usepackage{scrextend} % addmargin
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathmorphing}
-\usepackage{xcolor}
+\usetikzlibrary{backgrounds}
+\usepackage[most]{tcolorbox}
 
 \usepackage{hyperref}
 \hypersetup{
@@ -25,41 +25,77 @@
 }
 \parindent0pt
 \parskip2pt
-
-\newcommand{\block}[2]{%
-  \begin{tikzpicture}%
-  \node [draw=black, fill=white, very thick,
-rectangle, rounded corners, inner sep=10pt, inner ysep=10pt] (box){%
-    \begin{minipage}{0.3\textwidth}%
-		#2%
-    \end{minipage}%
-  };%
-\node[fill=black, text=white, font=\bfseries, right=10pt] at (box.north west) {#1};
-\end{tikzpicture}%
+\newenvironment{tightcenter}{%
+  \setlength\topsep{0pt}
+  \setlength\parskip{0pt}
+  \begin{center}
+}{%
+  \end{center}
+}
+\newcommand{\block}[2]{
+  \begin{tikzpicture}[]
+  \node [draw=MidnightBlue, fill=white, very thick,
+rectangle, rounded corners, inner sep=10pt, inner ysep=10pt] (box){
+    \begin{minipage}{0.3\textwidth}
+		#2
+    \end{minipage}
+  };
+\node[fill=MidnightBlue, text=white, rounded corners, font=\sffamily, right=10pt] at (box.north west) {\textbf{#1}};
+\end{tikzpicture}
 }
 
-\newcommand{\code}[1]{%
+\newcommand{\code}[1]{
   \begin{tcolorbox}[frame hidden, interior hidden, grow to left by=-5pt,
-  boxrule=0pt, boxsep=0pt, arc=0pt, breakable, before skip=4pt, after skip=5pt,]%
-  \parbox{\textwidth}{\ttfamily\small #1}%
+  boxrule=0pt, boxsep=0pt, arc=0pt, breakable, before skip=4pt, after skip=5pt,]
+  \parbox{\textwidth}{\ttfamily\small #1}
   \end{tcolorbox}
 }
 
-\title{ultimate PlantUML Cheatsheet}
+\newcommand{\header}[3]{
+  \title{#1}
+  \begin{tikzpicture}[]
+  \node [rectangle,anchor=north, minimum width=\textwidth] (title) at (current page.north) {
+    \LARGE\textbf{#1}
+  };
+  \node [anchor=north, outer sep=0] (author) at (title.south) {
+    \large #2
+  };
+  \node [anchor=north east, outer sep=0] (version) at (title.north east) {
+    \sffamily\small\color{RubineRed} #3
+  };
+  \end{tikzpicture}
+}
+
 \begin{document}
-\begin{center}{\huge{\textbf{ultimate PlantUML Cheatsheet}}{\hspace*{40pt}\small v.COMMIT-ID}}\\
-{\large by \href{http://anoff.io}{Andreas Offenhaeuser}}
-\end{center}
+\vspace{-5pt}
+\header{ultimate PlantUML Cheatsheet}{by \href{http://anoff.io}{Andreas Offenhaeuser}}{v.COMMITID}
+\vspace{-20pt} % couldn't figure out where the margins come from so force them out
 \begin{multicols*}{3}
 
-%%% COMPONENTS %%%
-\block{Components}{
-A list of plantUML components and their names, most can be used in any diagrams. The \textit{sequence} diagram only supports a subset.
-  \includegraphics[width=\textwidth]{diagrams/dist/components.pdf} 
+%%% ICONS %%%
+\block{Icons}{
+\href{https://useiconic.com/open/}{Open Iconic} is supported out of the box. Any icon can be rendered by embedding into \textbf{<\&..>}.
+\code{
+card "<\&key> key"
+
+card "<size:42><\&wrench></size>"
+}
+\begin{tightcenter}
+  \includegraphics[height=70pt, width=0.45\textwidth, keepaspectratio]{diagrams/dist/icons.pdf}
+  \includegraphics[height=70pt, width=0.45\textwidth, keepaspectratio]{diagrams/dist/icons-transparent.pdf}
+\end{tightcenter}
+
+Icons can be shown as icon only by disabling the border and background styles.
+
+\code{
+  skinparam cardBorderColor none \\
+  skinparam cardBackgroundColor none \\
+  skinparam cardShadowing false
+}
 }
 
 %%% SPRITE ICONS %%%
-\block{Sprite icons}{
+\block{Sprite Icons}{
 Additional icons can be added via sprites. There is a collection of \href{https://github.com/tupadr3/plantuml-icon-font-sprites}{Font Awesome, Developer, Government,.. icons} available via GitHub. Sprites can be included from any location that is reachable by the PlantUML server.
 
 \code{
@@ -77,36 +113,21 @@ Additional icons can be added via sprites. There is a collection of \href{https:
   \end{addmargin}
   \}
 }
-\begin{center}
-  \includegraphics[height=70pt, width=0.9\textwidth, keepaspectratio]{diagrams/dist/icons-sprite.pdf}
-\end{center}
+\begin{tightcenter}
+  \includegraphics[height=90pt, width=0.9\textwidth, keepaspectratio]{diagrams/dist/icons-sprite.pdf}
+\end{tightcenter}
 }
 
-%%% ICONS %%%
-\block{Icons}{
-PlantUML supports \href{https://useiconic.com/open/}{Open Iconic} set out of the box. Any icon can be rendered when embedding it in \textbf{<\&..>}.
-\code{
-card "<\&key> key"
-
-card "<size:42><\&wrench></size>"
-}
-\begin{center}
-  \includegraphics[height=70pt, width=0.45\textwidth, keepaspectratio]{diagrams/dist/icons.pdf}
-  \includegraphics[height=70pt, width=0.45\textwidth, keepaspectratio]{diagrams/dist/icons-transparent.pdf}
-\end{center}
-
-Icons can be shown as icon only by disabling the border and background styles.
-
-\code{
-  rectangle "<size:150><\&sun></size>" as sun \\
-  skinparam rectangleBorderColor none \\
-  skinparam rectangleBackgroundColor none \\
-  skinparam rectangleShadowing false
-}
+%%% COMPONENTS %%%
+\block{Components}{
+A list of plantUML components and their names, most can be used in any diagrams. The \textit{sequence} diagram only supports a subset.
+\begin{tightcenter}
+  \includegraphics[height=180pt, width=\textwidth, keepaspectratio]{diagrams/dist/components.pdf} 
+\end{tightcenter}
 }
 
 %%% MULTILINE %%%
-\block{Multiline components}{
+\block{Multiline Components}{
 Text can be spread across multiple lines in components by declaring the text in \textbf{[ ]}.
 \code{
 node mynode [
@@ -120,22 +141,24 @@ node mynode [
 \end{addmargin}
 ]
 }
+\begin{tightcenter}
   \includegraphics[width=0.7\textwidth]{diagrams/dist/multiline.pdf} 
+\end{tightcenter}
 }
 
 %%% ARROWS %%%
 \block{Arrows}{
-PlantUML supports almost all \href{http://loufranco.com/wp-content/uploads/2012/11/cheatsheet.pdf}{UML arrow types}.
-All combinations of two arrow heads and line type can be set.
-\begin{center}
-  \includegraphics[height=80pt, width=0.9\textwidth, keepaspectratio]{diagrams/dist/arrows.pdf}
+All combinations of two arrow heads and line type can be used to create any \href{http://loufranco.com/wp-content/uploads/2012/11/cheatsheet.pdf}{UML arrow type}.
 
-  \includegraphics[height=80pt, width=0.9\textwidth, keepaspectratio]{diagrams/dist/arrows-2.pdf}
-\end{center}
+\begin{tightcenter}
+  \includegraphics[height=80pt, width=\textwidth, keepaspectratio]{diagrams/dist/arrows.pdf}
+
+  \includegraphics[height=80pt, width=\textwidth, keepaspectratio]{diagrams/dist/arrows-2.pdf}
+\end{tightcenter}
 }
 
 %%% SKINPARAM %%%
-\block{Skinparam properties}{
+\block{Skinparam Properties}{
 For any \textit{component} style properties can be set via
 \code{
 skinparam <Component><Property> <value>
