:scissors: refactor: get rid of emoji

--- a/_posts/2019-01-15-book-2018-in-books.md
+++ b/_posts/2019-01-15-book-2018-in-books.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 📚 My year 2018 in books
+title: My year 2018 in books
 subtitle: First in a series of lessons from books I read
 tags: [development, books]
 share-img: ./img/assets/book-intro/title.png
