:ant: fix: image paths

--- a/_posts/2019-01-15-book-2018-in-books.md
+++ b/_posts/2019-01-15-book-2018-in-books.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: My year 2018 in books
-subtitle: First in a series of lessons from books I read
+subtitle: First in a series of lessons from books 📚 I read
 tags: [development, books]
 share-img: ./img/assets/book-intro/title.png
 image: ./img/assets/book-intro/logo.png
@@ -63,7 +63,7 @@ Since I did not keep notes on all the books some might only have very short opin
 
 ### Elon Musk: How the Billionaire CEO of SpaceX and Tesla is Shaping our Future
 
-`by Ashlee Vance` <img src="{{ site.baseurl }}/img/assets/books-intro/musk.jpg" />
+`by Ashlee Vance` <img src="{{ site.baseurl }}/img/assets/book-2018/musk.jpg" />
 
 After the hype around SpaceX Falcon launch I wanted to learn more about [Elon Musk](https://twitter.com/elonmusk) - especially his past and how he got to the point where he runs several big firms with an incredible impact on humanity. This **biography** does a good job at this and also claims to be the only one that actually got Musk to give info/feedback about his biography.
 
@@ -73,7 +73,7 @@ There is a [great blog post](https://waitbutwhy.com/2017/04/neuralink.html) out 
 
 ### Rework
 
-`by Jason Fried & David Heinemeier Hansson` <img src="{{ site.baseurl }}/img/assets/books-intro/rework.jpg" class="left"/>
+`by Jason Fried & David Heinemeier Hansson` <img src="{{ site.baseurl }}/img/assets/book-2018/rework.jpg" class="left"/>
 
 This book is packed with tips for **entrepreneurs**. In my opinion the advice given in this book is very thorough but only fits for a specific kind of enterprise - those that are similar to Davids own Basecamp.
 
@@ -98,7 +98,7 @@ If you have a customer that makes up a significant amount of revenue you need to
 
 ### Alibaba: The house that Jack Ma built
 
-`by Duncan Clark` <img src="{{ site.baseurl }}/img/assets/books-intro/alibaba.jpg" />
+`by Duncan Clark` <img src="{{ site.baseurl }}/img/assets/book-2018/alibaba.jpg" />
 
 After learning about the CEO of Tesla and Microsoft I decided to take a peek at the other side of the globe and binged the **biography** of Alibabas CEO Jack Ma.
 Before listening to this book I thought I was somewhat aware of the size of the Ali empire; but I was wrong. This book starts off by detailing Alibabas birth and how Jack Ma never sought to compete with Amazon or eBay (B2C) but instead focus on the B2B market to offer a marketplace to the diverse and growing manufacturing industry in China.
@@ -108,13 +108,13 @@ It is exciting to hear how the different branches of his empire strategically fi
 
 ### Hit Refresh
 
-`by Satya Nadella` <img src="{{ site.baseurl }}/img/assets/books-intro/nadella.jpg" class="left"/>
+`by Satya Nadella` <img src="{{ site.baseurl }}/img/assets/book-2018/nadella.jpg" class="left"/>
 
 A great book to learn about the **cultural transformation at Microsoft** that happened over the last ~10 years. Satya elaborates about how he pushes for diversity in various fields to come to the best possible decisions and products. This includes Microsofts push towards becoming more involved in Open Source as the amount of creativity and pure manpower in the Open Source world is huge - even when compared with a company like Microsoft.
 
 ### Weapons of Math Destruction
 
-`by Cathy O'Neil` <img src="{{ site.baseurl }}/img/assets/books-intro/math.jpg" />
+`by Cathy O'Neil` <img src="{{ site.baseurl }}/img/assets/book-2018/math.jpg" />
 
 This book takes a look at the **risks of AI**. Not in the Terminator Doomsday kind but the very real risks we already have to consider - but often ignore - today. The main point made in the book is that people too often think _results given by machines are objective_ and do not realize they too are subject to prejudice and bias. It is very important to clearly **differentiate** at this point. The machine itself is objective in what it does, but the person operating the machine is not. Therefore it is important to pay close attention to how AI results were achieved.
 
@@ -127,7 +127,7 @@ The book does not ask to ablish AI but to be more aware of the results and to tr
 
 ### The Phoenix Project
 
-`by Gene Kim, Kevin Behr & George Spafford` <img src="{{ site.baseurl }}/img/assets/books-intro/phoenix.jpg" class="left"/>
+`by Gene Kim, Kevin Behr & George Spafford` <img src="{{ site.baseurl }}/img/assets/book-2018/phoenix.jpg" class="left"/>
 
 A **must read** for everyone involved in IT and uses buzzwords like **DevOps** - especially managers. This novel is easy to read and follows the journey of a _classic_ IT manager into the world of DevOps. Several chapters explain how changes in manufactoring (e.g. [Kanban](https://en.wikipedia.org/wiki/Kanban) or [Kaizen](https://en.wikipedia.org/wiki/Kaizen)) are comparable to the DevOps movement in IT and thereby also help traditional manufacturing managers to better understand the world of IT. I do not want to write another post about the impact of DevOps but if you are interested in **digital transformation** I can highly recommend this great book.
 
