:ant: fix: excerpts + title

--- a/_posts/2019-01-15-book-2018-in-books.md
+++ b/_posts/2019-01-15-book-2018-in-books.md
@@ -7,38 +7,6 @@ share-img: ./img/assets/book-2018/title.png
 image: ./img/assets/book-2018/logo.png
 ---
 
-<head>
-<style>
-img {
-  float: right;
-  margin: 0px 0px 15px 20px;
-}
-img.left {
-  float: left;
-  margin: 0px 20px 15px 0px;
-}
-</style>
-</head>
-
-<!-- TOC -->
-- [Intro](#intro)
-- [Motivation](#motivation)
-- [My books in 2018](#my-books-in-2018)
-  - [Elon Musk: How the Billionaire CEO of SpaceX and Tesla is Shaping our Future](#elon-musk-how-the-billionaire-ceo-of-spacex-and-tesla-is-shaping-our-future)
-  - [Alibaba: The house that Jack Ma built](#alibaba-the-house-that-jack-ma-built)
-  - [Rework](#rework)
-    - [1. Simple products lead to happy customers](#1-simple-products-lead-to-happy-customers)
-    - [2. Diversity kills product focus](#2-diversity-kills-product-focus)
-- [Previous highlights](#previous-highlights)
-  - [Hit Refresh](#hit-refresh)
-  - [Weapons of Math Destruction](#weapons-of-math-destruction)
-  - [The Phoenix Project](#the-phoenix-project)
-- [Upcoming](#upcoming)
-
-<!-- /TOC -->
-
-## Intro
-
 For the last ~15 months I spent a lot of wasted time (commuting to work, waiting at the doctors, sitting on planes) with audio books. I have never been a big reader and the entry barrier to start listening to a book instead of music is a lot lower than packing books, reading instead of listening etc. That's why I became a really big fan of listening to various audiobooks.
 
 Years ago I listened to a lot of books by [Andreas Eschbach](https://en.wikipedia.org/wiki/Andreas_Eschbach) which I still love for their amazing worlds that are somewhat SciFi but also very realistic. They do not build an entire new civilization with new kinds of lifeforms, instead they alter one tiny detail e.g. humans mastered nano robots or growing oil from bacteria. My all time favorite is [Lord of all things [not a referral]](https://www.amazon.de/Lord-All-Things-Andreas-Eschbach/dp/1477849815).
@@ -63,7 +31,7 @@ Since I did not keep notes on all the books some might only have very short opin
 
 ### Elon Musk: How the Billionaire CEO of SpaceX and Tesla is Shaping our Future
 
-`by Ashlee Vance` <img src="{{ site.baseurl }}/img/assets/book-2018/musk.jpg" />
+`by Ashlee Vance` <img src="{{ site.baseurl }}/img/assets/book-2018/musk.jpg" class="right"/>
 
 After the hype around SpaceX Falcon launch I wanted to learn more about [Elon Musk](https://twitter.com/elonmusk) - especially his past and how he got to the point where he runs several big firms with an incredible impact on humanity. This **biography** does a good job at this and also claims to be the only one that actually got Musk to give info/feedback about his biography.
 
@@ -98,7 +66,7 @@ If you have a customer that makes up a significant amount of revenue you need to
 
 ### Alibaba: The house that Jack Ma built
 
-`by Duncan Clark` <img src="{{ site.baseurl }}/img/assets/book-2018/alibaba.jpg" />
+`by Duncan Clark` <img src="{{ site.baseurl }}/img/assets/book-2018/alibaba.jpg" class="right"/>
 
 After learning about the CEO of Tesla and Microsoft I decided to take a peek at the other side of the globe and binged the **biography** of Alibabas CEO Jack Ma.
 Before listening to this book I thought I was somewhat aware of the size of the Ali empire; but I was wrong. This book starts off by detailing Alibabas birth and how Jack Ma never sought to compete with Amazon or eBay (B2C) but instead focus on the B2B market to offer a marketplace to the diverse and growing manufacturing industry in China.
@@ -114,7 +82,7 @@ A great book to learn about the **cultural transformation at Microsoft** that ha
 
 ### Weapons of Math Destruction
 
-`by Cathy O'Neil` <img src="{{ site.baseurl }}/img/assets/book-2018/math.jpg" />
+`by Cathy O'Neil` <img src="{{ site.baseurl }}/img/assets/book-2018/math.jpg" class="right" />
 
 This book takes a look at the **risks of AI**. Not in the Terminator Doomsday kind but the very real risks we already have to consider - but often ignore - today. The main point made in the book is that people too often think _results given by machines are objective_ and do not realize they too are subject to prejudice and bias. It is very important to clearly **differentiate** at this point. The machine itself is objective in what it does, but the person operating the machine is not. Therefore it is important to pay close attention to how AI results were achieved.
 
