--- a/_posts/2019-01-15-book-2018-in-books.md
+++ b/_posts/2019-01-15-book-2018-in-books.md
@@ -112,7 +112,7 @@ An explanation of the ways can be found in this [blog post by the Author Gene Ki
 I will publish posts on the following books I also read in 2018 soon:
 
 - **Powerful** talking about things I take from Netflix' culture that are easy to apply
-- **How Google works** focusing on how to hire and build a great team
+- **How Google works** focusing on how to hire and build a great team _Update: 2019-01-31 [published]({{ site.baseurl }}/2019-01-31-book-google-schmidt)_
 
 
 It was great to think back to all those books and I hope it will be as fun for future books. Please let me know what you think about the books or any recommendations you have for me in the comments or on [Twitter](https://twitter.com/an0xff).
