:star2: feat: share img

--- a/_posts/2019-01-15-book-2018-in-books.md
+++ b/_posts/2019-01-15-book-2018-in-books.md
@@ -3,7 +3,7 @@ layout: post
 title: My year 2018 in books
 subtitle: First in a series of lessons from books 📚 I read
 tags: [development, books]
-share-img: ./img/assets/book-2018/logo.png
+share-img: /img/assets/book-2018/logo.png
 image: ./img/assets/book-2018/logo.png
 ---
 
